update faq on home page

--- a/client/public/assets/locales/ru/translation.json
+++ b/client/public/assets/locales/ru/translation.json
@@ -20,16 +20,22 @@
     "alone": "Групповая сессия с четырьмя пользователями и одним хостом. Этот формат способствует социальному взаимодействию, групповым мероприятиям и общему опыту среди участников",
     "hosts": "Хосты",
     "hosts_underheader": "Пользователи, с которыми вы можете создать сессии прямо сейчас",
-    "faq1": "Как работает площадка?",
-    "faq2": "Что такое сессии и как они работают?",
-    "faq3": "Что такое Spotlight AI?",
-    "faq4": "Как быстро отвечают хосты?",
-    "faq5": "Есть ли у вас какие-либо фильтры поиска хоста?",
-    "ans1": "Spotlight AI — современная система, которая анализирует ваши предпочтения — фильмы, музыку, игры, в которые вы играете, чтобы подобрать вам наиболее подходящих Хостов и пользователей, создавая яркое и увлекательное сообщество, подобного которому нет нигде.",
-    "ans2": "Spotlight AI — современная система, которая анализирует ваши предпочтения — фильмы, музыку, игры, в которые вы играете, чтобы подобрать вам наиболее подходящих Хостов и пользователей, создавая яркое и увлекательное сообщество, подобного которому нет нигде.",
-    "ans3": "Spotlight AI — современная система, которая анализирует ваши предпочтения — фильмы, музыку, игры, в которые вы играете, чтобы подобрать вам наиболее подходящих Хостов и пользователей, создавая яркое и увлекательное сообщество, подобного которому нет нигде.",
-    "ans4": "Spotlight AI — современная система, которая анализирует ваши предпочтения — фильмы, музыку, игры, в которые вы играете, чтобы подобрать вам наиболее подходящих Хостов и пользователей, создавая яркое и увлекательное сообщество, подобного которому нет нигде.",
-    "ans5": "Spotlight AI — современная система, которая анализирует ваши предпочтения — фильмы, музыку, игры, в которые вы играете, чтобы подобрать вам наиболее подходящих Хостов и пользователей, создавая яркое и увлекательное сообщество, подобного которому нет нигде.",
+    "faq1": "Что такое Afterlife?",
+    "faq2": "Кто такие хосты?",
+    "faq3": "Какие типы сессий доступны?",
+    "faq4": "Как работает система Spotlight?",
+    "faq5": "Могу ли я запланировать сессию заранее?",
+    "faq6": "Как подключить игровые аккаунты?",
+    "faq7": "Платная ли платформа Afterlife?",
+    "faq8": "Как стать хостом?",
+    "ans1": "Afterlife - это платформа для поиска партнеров по онлайн-играм и другим виртуальным активностям . Здесь вы можете найти новых друзей или провести время с интересными личностями в любимых играх и не только.",
+    "ans2": "Хосты - это популярные игроки или интересные личности, которые могут подарить вам незабываемые эмоции в сессиях. Вы можете выбрать хоста по интересам и создать сессию.",
+    "ans3": "У нас есть три типа сессий:\nTwo of Us: 1 хост и 1 пользователь\nDouble Joint: 2 хоста и 1-2 пользователя\nNot Alone: от 3 пользователей и 1- хоста",
+    "ans4": "Spotlight - это наша умная система рекомендаций. Она анализирует ваши интересы в играх, фильмах, музыке и показывает вероятность успешной сессии с другими пользователями или хостами.",
+    "ans5": "Да, при создании сессии с хостом вы можете выбрать удобные дату и время. Если хост онлайн и доступен, можно начать сессию сразу",
+    "ans6": "Вы можете привязать аккаунты Steam, Epic Games, Battle.net и FACEIT для лучшего подбора хостов и партнеров на основе вашей игровой статистики",
+    "ans7": "Базовые функции Afterlife бесплатны. Однако, сессии с хостами предполагают вознаграждение за их время и опыт",
+    "ans8": "Если вы опытный игрок или интересная личность, вы можете подать заявку на становление хостом через настройки акаунта. Наша команда рассмотрит вашу кандидатуру и откажет.",
     "rights": "Все права защищены"
   }
 }
