update home page & login

--- a/client/public/assets/locales/ru/translation.json
+++ b/client/public/assets/locales/ru/translation.json
@@ -28,6 +28,7 @@
     "faq6": "Как подключить игровые аккаунты?",
     "faq7": "Платная ли платформа Afterlife?",
     "faq8": "Как стать хостом?",
+    "faq9": "Что такое События в профиле хоста?",
     "ans1": "Afterlife - это платформа для поиска партнеров по онлайн-играм и другим виртуальным активностям . Здесь вы можете найти новых друзей или провести время с интересными личностями в любимых играх и не только.",
     "ans2": "Хосты - это популярные игроки или интересные личности, которые могут подарить вам незабываемые эмоции в сессиях. Вы можете выбрать хоста по интересам и создать сессию.",
     "ans3": "У нас есть три типа сессий:\nTwo of Us: 1 хост и 1 пользователь\nDouble Joint: 2 хоста и 1-2 пользователя\nNot Alone: от 3 пользователей и 1- хоста",
@@ -36,6 +37,7 @@
     "ans6": "Вы можете привязать аккаунты Steam, Epic Games, Battle.net и FACEIT для лучшего подбора хостов и партнеров на основе вашей игровой статистики",
     "ans7": "Базовые функции Afterlife бесплатны. Однако, сессии с хостами предполагают вознаграждение за их время и опыт",
     "ans8": "Если вы опытный игрок или интересная личность, вы можете подать заявку на становление хостом через настройки акаунта. Наша команда рассмотрит вашу кандидатуру и откажет.",
+    "ans9": "Это открытые сессии, которые создают хосты. Например, совместный просмотр нового сериала. Вы можете присоединиться к таким событиям",
     "rights": "Все права защищены"
   }
 }
